testing/tests/ui/is_defined.stderr
error: `is defined` operator can only be used on variables, not on their fields
 --> <source attribute>:1:6
       "x.y is defined %}{% endif %}"
 --> tests/ui/is_defined.rs:6:5
  |
6 |     source = r#"{% if x.y is defined %}{% endif %}"#,
  |     ^^^^^^

error: `is defined` operator can only be used on variables
 --> <source attribute>:1:6
       "true is defined %}{% endif %}"
  --> tests/ui/is_defined.rs:13:5
   |
13 |     source = r#"{% if true is defined %}{% endif %}"#,
   |     ^^^^^^

error: expected `defined` or `not defined` after `is`
 --> <source attribute>:1:6
       "true is %}{% endif %}"
  --> tests/ui/is_defined.rs:20:5
   |
20 |     source = r#"{% if true is %}{% endif %}"#,
   |     ^^^^^^

error: expected `defined` or `not defined` after `is`
 --> <source attribute>:1:6
       "x is %}{% endif %}"
  --> tests/ui/is_defined.rs:27:5
   |
27 |     source = r#"{% if x is %}{% endif %}"#,
   |     ^^^^^^

error: expected `defined` or `not defined` after `is`
 --> <source attribute>:1:6
       "x is blue %}{% endif %}"
  --> tests/ui/is_defined.rs:34:5
   |
34 |     source = r#"{% if x is blue %}{% endif %}"#,
   |     ^^^^^^

error: expected `defined` or `not defined` after `is`
 --> <source attribute>:1:6
       "x is blue.red %}{% endif %}"
  --> tests/ui/is_defined.rs:41:5
   |
41 |     source = r#"{% if x is blue.red %}{% endif %}"#,
   |     ^^^^^^
